--- a/Web/home.html
+++ b/Web/home.html
@@ -16,7 +16,7 @@
 
                 <nav class="headingLeft">
                         <ul>
-                        <li><a href="#">Sustainabytes</a></li>
+                        <li><a href="home.html">Sustainabytes</a></li>
 
                 </nav>
 
@@ -25,7 +25,7 @@
                 
                         <li><a href="#">Team</a></li>
                         <li><a href="#">Projects</a></li>
-                        <li><a href="#">Education</a></li>
+                        <li><a href="Education.html">Education</a></li>
                         <li><a href="#">Apply Now!</a></li>
                     </ul>
                 </nav>
@@ -56,6 +56,7 @@
                     Through workshops, hands-on projects, and advocacy, we strive to build a 
                     vibrant community of students who are passionate about learning and driving meaningful change.
                 </p>
+
             </div>
 
 
