Added new html and css pages + changes
The tabs didn't lead anywhere, and the colors were slightly adjusted upon request.

--- a/Education.html
+++ b/Education.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="stylesHome.css" rel="stylesheet" type="text/css">
+        <link href="stylesEducation.css" rel="stylesheet" type="text/css">
+        <link rel="icon" href="assets/faviconflower.png" type="png">
         <title>
-            Home Page
+            Cornell SUSB | Education
         </title>
     </head>
 
@@ -23,13 +24,14 @@
                 <nav class="headingRight">
                     <ul>
                 
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="Education.html">Education</a></li>
-                        <li><a href="#">Apply Now!</a></li>
+                        <li><a href="aboutUs.html">Team</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="Education.html" class="active">Education</a></li>
+                        <li><a href="#" class="apply">Apply Now!</a></li>
                     </ul>
                 </nav>
 
             </div>
         </header>
-    </html>
+    </body>
+</html>
