Made prgress on layout, and texts
Changed the wording for the texts as well as adding on more texts to placeholder paragraphs. Also made more progress on the home page layout.

--- a/Education.html
+++ b/Education.html
@@ -27,7 +27,7 @@
                         <li><a href="aboutUs.html">Team</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="Education.html" class="active">Education</a></li>
-                        <li><a href="#" class="apply">Apply Now!</a></li>
+                        <li><a href="#" class="apply">Join Us!</a></li>
                     </ul>
                 </nav>
 
