--- a/aboutUs.html
+++ b/aboutUs.html
@@ -27,11 +27,23 @@
                         <li><a href="aboutUs.html" class="active">Team</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="Education.html">Education</a></li>
-                        <li><a href="#" class="apply">Apply Now!</a></li>
+                        <li><a href="#" class="apply">Join Us!</a></li>
                     </ul>
                 </nav>
 
             </div>
         </header>
+
+        <div class="container2">
+            <img src="assets/TempPhoto.png" alt="A photo of the team at Computational Sustainability Club at Cornell.">
+            <h1>🌿 About 🌿</h1>
+            <p>
+                We are a student-led community passionate about tackling environmental challenges through computational 
+                approaches. Our mission is to empower students with education, hands-on experience, and interdisciplinary 
+                collaboration.
+            </p>
+        </div>
+
+
     </body>
 </html>
