--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
                     <li><a href="aboutUs.html">Team</a></li>
                     <li><a href="projects.html" class="active">Projects</a></li>
                     <li><a href="Education.html">Education</a></li>
-                    <li><a href="#" class="apply">Apply Now!</a></li>
+                    <li><a href="#" class="apply">Join Us!</a></li>
                 </ul>
             </nav>
 
