Changed the styling of the rest of the pages to match with the home page, finished the top part of the team page

--- a/Education.html
+++ b/Education.html
@@ -27,11 +27,16 @@
                         <li><a href="aboutUs.html">Team</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="Education.html" class="active">Education</a></li>
-                        <li><a href="#" class="apply">Join Us!</a></li>
+                        <li><a href="#" class="section-button" style="background-color: #F8E16F; color: black;">Join Us!</a></li>
                     </ul>
                 </nav>
 
             </div>
         </header>
+
+        <div class="container2">
+            <img src="assets/TempPhoto.png" alt="A photo of the team at Computational Sustainability Club at Cornell.">
+            
+        </div>
     </body>
 </html>
