--- a/aboutUs.html
+++ b/aboutUs.html
@@ -27,7 +27,7 @@
                         <li><a href="aboutUs.html" class="active">Team</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="Education.html">Education</a></li>
-                        <li><a href="#" class="apply">Join Us!</a></li>
+                        <li><a href="#" class="section-button" style="background-color: #F8E16F; color: black;">Join Us!</a></li>
                     </ul>
                 </nav>
 
@@ -35,8 +35,10 @@
         </header>
 
         <div class="container2">
-            <img src="assets/TempPhoto.png" alt="A photo of the team at Computational Sustainability Club at Cornell.">
-            <h1>🌿 About 🌿</h1>
+            <h1>About the team!</h1>
+            
+            <img src="/assets/TempPhoto.png" alt="A photo of the SUSB team">
+            
             <p>
                 We are a student-led community passionate about tackling environmental challenges through computational 
                 approaches. Our mission is to empower students with education, hands-on experience, and interdisciplinary 
@@ -44,6 +46,8 @@
             </p>
         </div>
 
-
+        <div class="container3">
+            <h1>Mission Pillars</h1>
+        </div>
     </body>
 </html>
