--- a/projects.html
+++ b/projects.html
@@ -28,11 +28,16 @@
                     <li><a href="aboutUs.html">Team</a></li>
                     <li><a href="projects.html" class="active">Projects</a></li>
                     <li><a href="Education.html">Education</a></li>
-                    <li><a href="#" class="apply">Join Us!</a></li>
+                    <li><a href="#" class="section-button" style="background-color: #F8E16F; color: black;">Join Us!</a></li>
                 </ul>
             </nav>
 
         </div>
     </header>
+
+    <div class="container2">
+        <img src="assets/TempPhoto.png" alt="A photo of the team at Computational Sustainability Club at Cornell.">
+        
+    </div>
 </body>
 </html>
