worked on the flower graphics in the team page with CSS, planning to add animations to it as well with CSS animations

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -48,6 +48,45 @@
 
         <div class="container3">
             <h1>Mission Pillars</h1>
+
+            <div class="flowers">
+                <div class="mission one">
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="center"></div>
+                    <div class="stem"></div>
+                    <div class="leftleaf"></div>
+                    <div class="rightleaf"></div>
+                </div>
+
+                <div class="mission two">
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="center"></div>
+                    <div class="stem"></div>
+                    <div class="leftleaf"></div>
+                    <div class="rightleaf"></div>
+                    <div class="rightleaf"></div>
+                </div>
+
+                <div class="mission three">
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="center"></div>
+                    <div class="stem"></div>
+                    <div class="leftleaf"></div>
+                    <div class="rightleaf"></div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
