Added visual details
Included some images, that were originally part of the figma desgin, in the home page. Also edited the flower in the team page t fit mission statement

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -49,6 +49,8 @@
         <div class="container3">
             <h1>Mission Pillars</h1>
 
+            <img class="vector" src="assets/Vector.png" alt="A decorative green pencil underline">
+
             <div class="flowers">
                 <div class="mission one">
                     <div class="petal"></div>
@@ -57,6 +59,10 @@
                     <div class="petal"></div>
                     <div class="petal"></div>
                     <div class="center"></div>
+                    <div class="pillar">
+                        <h2> I. Upskill Through Service </h2> 
+                        <p> Apply data science, technology, and analytics to real-world sustainability challenges </p>
+                    </div>
                     <div class="stem"></div>
                     <div class="leftleaf"></div>
                     <div class="rightleaf"></div>
@@ -69,9 +75,13 @@
                     <div class="petal"></div>
                     <div class="petal"></div>
                     <div class="center"></div>
+                    <div class="pillar">
+                        <h2>II. Build Community</h2>
+                        <p>Foster interdisciplinary collaborations and connect data, tech, 
+                        and environmental groups through outreach, events, and creative initiatives </p>
+                    </div>
                     <div class="stem"></div>
                     <div class="leftleaf"></div>
-                    <div class="rightleaf"></div>
                     <div class="rightleaf"></div>
                 </div>
 
@@ -82,6 +92,11 @@
                     <div class="petal"></div>
                     <div class="petal"></div>
                     <div class="center"></div>
+                    <div class="pillar">
+                        <h2>III. Professional Development</h2>
+                        <p>Engage with sustainability-focused professionals and peers through 
+                        socials, networking events, speaker series, and career panels </p>
+                    </div>
                     <div class="stem"></div>
                     <div class="leftleaf"></div>
                     <div class="rightleaf"></div>
