--- a/home.html
+++ b/home.html
@@ -35,9 +35,14 @@
         </header>
         <div class="container2">
             <div class="divider">
+                <h4>
+                    🌱 Computational Sustainability Club
+                </h4>
                 <h1>
                     Students For Green Tech & Data
                 </h1>
+
+                <img class="vector5" src="assets/Vector.png" alt="A decorative green pencil underline">
 
                 <p>
                     We are a student-led team empowering Cornellians to leverage technology and data to solve environmental challenges.
@@ -51,6 +56,8 @@
             <h1>
                 Our Vision
             </h1>
+
+            <img class="vector4" src="assets/Vector4.png" alt="A decorative coral pencil underline">
 
             <p>
                 We aim to drive meaningful change and to build a vibrant community of passionate learners through events, hands-on projects, and advocacy.
@@ -68,6 +75,8 @@
                 <h1>
                     Upskill Through Service
                 </h1>
+
+                <img class="vector" src="assets/Vector.png" alt="A decorative green pencil underline">
 
                 <p>
                     We host technical project opportunities (Working Groups) to apply data analytics and technology (CS, data science, informatics, statistics, UI/UX) to real-world sustainability and serve the local area.
@@ -91,6 +100,8 @@
                     Building a strong community in computational sustainability 
                 </h1>
     
+                <img class="vector2" src="assets/Vector4.png" alt="A decorative coral pencil underline">
+
                 <p>
                     We aim to foster and host interdisciplinary collaborations across data, tech, and environment and sustainability groups on campus through engagement and outreach initiatives.
                 </p>
@@ -109,6 +120,8 @@
                     Join the Team! 
                 </h1>
     
+                <img class="vector3" src="assets/Vector.png" alt="A decorative green pencil underline">
+
                 <p>
                     Sustainabytes is currently laying project foundations and working toward official recognition as a Cornell student organization (Computational Sustainability Club). 
                     Join us to pioneer the computational sustainability community and make a difference 🌱  
