added the footer to the team page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -103,5 +103,22 @@
                 </div>
             </div>
         </div>
+
+        <div class="container4">
+
+        </div>
+
+        <footer>
+            <div class="footer-icons">
+              <a href="https://github.com/Sustainabytes">
+                <img src="assets/github-mark.svg" alt="GitHub">
+              </a>
+              <a href="https://www.instagram.com/sustainabytes_/">
+                <img src="assets/instagram-svgrepo-com.svg" alt="Instagram">
+              </a>
+            </div>
+          
+            <p class="footer-text">Cornell Sustainabytes © 2025</p>
+        </footer>
     </body>
 </html>
