added a target attribute to hyperlink in the footer
Originally when the icons were clicked, the link will be opened on the current tab, now with target="_blank", it will be opened in a new tab.

--- a/home.html
+++ b/home.html
@@ -136,10 +136,10 @@
     
         <footer>
             <div class="footer-icons">
-              <a href="https://github.com/Sustainabytes">
+              <a href="https://github.com/Sustainabytes" target="_blank">
                 <img src="assets/github-mark.svg" alt="GitHub">
               </a>
-              <a href="https://www.instagram.com/sustainabytes_/">
+              <a href="https://www.instagram.com/sustainabytes_/" target="_blank">
                 <img src="assets/instagram-svgrepo-com.svg" alt="Instagram">
               </a>
             </div>
