Redesign home page
A new design was drafted in Figma, resulting in changes to the color scheme, images, logo, and layout.
Finished the redesign only to the home page. The same updates will be applied to the other tabs in future commits.

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -12,7 +12,7 @@
         <header>
             <div class="header">
 
-                <img src="assets\Sustainabytes_Logo.png" alt="logo" class="logo">
+                <img src="assets\newLogo.webp" alt="logo" class="logo">
                 
 
                 <nav class="headingLeft">
@@ -105,7 +105,11 @@
         </div>
 
         <div class="container4">
-
+            <img src="assets/gomes-2021.png" alt="A picture of the advisor for Sustainabytes, Carla Gomes" class="advisor">
+            <div>
+                <h1>Carla Gomes</h4>
+                <h4>Institute for Computational Sustainability</h4>
+            </div>
         </div>
 
         <footer>
