Changes all other pages' header and footers

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
                 <nav class="headingRight">
                     <ul>
                 
-                        <li><a href="aboutUs.html">Team</a></li>
+                        <li><a href="team.html">Team</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="Education.html">Education</a></li>
                         <li><a href="#" class="section-button"><em>Contacts</em></a></li>
