--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="stylesAbout.css" rel="stylesheet" type="text/css">
+        <link href="stylesTeam.css" rel="stylesheet" type="text/css">
         <link rel="icon" href="assets/faviconflower.png" type="png">
         <title>
             Cornell SUSB | Team
@@ -17,17 +17,17 @@
 
                 <nav class="headingLeft">
                         <ul>
-                        <li><a href="home.html">Sustainabytes</a></li>
+                        <li><a href="home.html">SUSTAINABYTES</a></li>
 
                 </nav>
 
                 <nav class="headingRight">
                     <ul>
                 
-                        <li><a href="aboutUs.html" class="active">Team</a></li>
+                        <li><a href="team.html" class="active">Team</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="Education.html">Education</a></li>
-                        <li><a href="#" class="section-button" style="background-color: #F8E16F; color: black;">Join Us!</a></li>
+                        <li><a href="#" class="section-button"><em>Contacts</em></a></li>
                     </ul>
                 </nav>
 
@@ -113,12 +113,19 @@
         </div>
 
         <footer>
+            <img src="" alt="">
             <div class="footer-icons">
-              <a href="https://github.com/Sustainabytes">
-                <img src="assets/github-mark.svg" alt="GitHub">
+              <a href="https://github.com/Sustainabytes" target="_blank">
+                <img src="assets/github-mark.svg" alt="GitHub logo">
               </a>
-              <a href="https://www.instagram.com/sustainabytes_/">
-                <img src="assets/instagram-svgrepo-com.svg" alt="Instagram">
+              <a href="https://www.instagram.com/sustainabytes_/" target="_blank">
+                <img src="assets/instagram-svgrepo-com.svg" alt="Instagram logo">
+              </a>
+              <a href="mailto:sustainabytes@gmail.com">
+                <img src="assets/Mail.png" alt="EMail icon">
+              </a>
+              <a href="https://www.linkedin.com/company/sustainabytes-cornell/" target="_blank">
+                <img src="assets/Linkedin.png" alt="Linkedin logo">
               </a>
             </div>
           
