Made edits to spacing of logo and home button

--- a/Education.html
+++ b/Education.html
@@ -17,7 +17,7 @@
 
                 <nav class="headingLeft">
                         <ul>
-                        <li><a href="home.html">Sustainabytes</a></li>
+                        <li><a href="home.html">SUSTAINABYTES</a></li>
 
                 </nav>
 
