--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 
             <nav class="headingLeft">
                     <ul>
-                    <li><a href="home.html">Sustainabytes</a></li>
+                    <li><a href="home.html">SUSTAINABYTES</a></li>
 
             </nav>
 
