Fixed the error of the img of class .right and .rightS
The error was at line 133 where left: 0px was applied to all img in container 2, hence right: 0px; wouldn't work for the .right images. To fix the issure the images were separated into containers.

--- a/home.html
+++ b/home.html
@@ -35,13 +35,15 @@
             </div>
         </header>
         <div class="container2"> 
-            <div style="z-index: -1;">
+            <div class="leftImg">
                 <img src="assets/homeDecor.png" alt="A photo of a hand holding a bouquet of pink flowers.">
                 <img src="assets/Vector1.png" alt="A white scribble that serves for decoration purposes." style="top: 90px;">
-                <img src="assets/homeDecor2.png" alt="A photo of a hand holding a bouquet of pink flowers." class="left">
-                <img src="assets/Vector2.png" alt="A white scribble that serves for decoration purposes." class="leftS">
             </div>
-
+            <div class="rightImg">
+                <img src="assets/homeDecor2.png" alt="A photo of a hand holding a bouquet of pink flowers." class="right">
+                <img src="assets/Vector2.png" alt="A white scribble that serves for decoration purposes." class="rightS">
+            </div>
+            
             <div class="divider">
                 <div style="height: 4px; background-color: #000000; width: 540px;"></div>
                 <h4>
