Removed and debugged
Removed some of the odd design in the previous team page, and then debugged the button since before when hovering over the buttons the letter turn the same color as the background.

--- a/team.html
+++ b/team.html
@@ -35,20 +35,14 @@
         </header>
 
         <div class="container2">
-            <h1>About the team!</h1>
-            
-            <img src="/assets/TempPhoto.png" alt="A photo of the SUSB team">
+            <h1>Our Hardworking Team</h1>
             
             <p>
-                We are a student-led community passionate about tackling environmental challenges through computational 
-                approaches. Our mission is to empower students with education, hands-on experience, and interdisciplinary 
-                collaboration.
+                Check us out!
             </p>
         </div>
 
-        <div class="container3">
-            <h1>Mission Pillars</h1>
-
+        <!-- <div class="container3">
             <div class="flowers">
                 <div class="mission one">
                     <div class="petal"></div>
@@ -100,10 +94,9 @@
                     <div class="rightleaf"></div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="container4">
-            <img src="assets/gomes-2021.png" alt="A picture of the advisor for Sustainabytes, Carla Gomes" class="advisor">
             <div>
                 <h1>Carla Gomes</h4>
                 <h4>Institute for Computational Sustainability</h4>
