Mostly finished teams page to the design from figma. Added headshots and email button

--- a/team.html
+++ b/team.html
@@ -108,33 +108,67 @@
         </div>
 
         <div class="container5">
+            <div class="operationsTeam">
                 <h1>
                     Operations Team
                 </h1>
-            <div class="images5">
-                <div><img src="assets/teamAssets/teamTianyi.png" alt=""></div>
-                <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>
-                <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>  
-                <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>
+            <div class="images5Operations">
+                <div class = "container5Tianyi">
+                    <div class="headshot"><img src="assets/teamAssets/teamTianyi.png" alt=""></div>
+                    <div class="mail5Tianyi"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                </div>
+
+                <div class = "container5Kyle">
+                    <div class="headshot"><img src="assets/teamAssets/teamKyle.png" alt=""></div>
+                    <div class="mail5Kyle"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                </div>
+
+                <div class = "container5Mikael">
+                    <div class="headshot"><img src="assets/teamAssets/teamMikael.png" alt=""></div>
+                    <div class="mail5Mikael"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                </div>
+
+                <div class = "container5Reiley">
+                    <div class="headshot"><img src="assets/teamAssets/teamReiley.png" alt=""></div>
+                    <div class="mail5Reiley"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                </div>
 
             </div>
 
-            <div class="mail5">
-                <div><img src="assets/teamAssets/Mail.png" alt=""></div>
-                <div><img src="assets/teamAssets/Mail.png" alt=""></div>
-                <div><img src="assets/teamAssets/Mail.png" alt=""></div>
-                <div><img src="assets/teamAssets/Mail.png" alt=""></div>
             </div>
+
+            <!-- <div class="mail5">
+                <div><img src="assets/teamAssets/Mail.png" alt=""></div>
+                <div><img src="assets/teamAssets/Mail.png" alt=""></div>
+                <div><img src="assets/teamAssets/Mail.png" alt=""></div>
+                <div><img src="assets/teamAssets/Mail.png" alt=""></div>
+            </div> -->
 
                 <div class="outreachTeam">
                     <h1>
                         Outreach Team
                     </h1>
-                    <div class="images5">
-                    <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>
-                    <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>
-                    <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>  
-                    <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>
+                    <div class="images5Outreach">
+                    <div class = "container5Jerry">
+                        <div class="headshot"><img src="assets/teamAssets/teamJerry.png" alt=""></div>
+                        <div class="mail5Jerry"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                    </div>
+
+                    <div class = "container5Kalia">
+                        <div class="headshot"><img src="assets/teamAssets/teamKalia.png" alt=""></div>
+                        <div class="mail5Kalia"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                    </div>
+
+                    <div class = "container5Kaavya">
+                        <div class="headshot"><img src="assets/teamAssets/teamKaavya.png" alt=""></div>
+                        <div class="mail5Kaavya"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                    </div>
+
+                    <div class = "container5Aish">
+                        <div class="headshot"><img src="assets/teamAssets/teamAish.png" alt=""></div>
+                        <div class="mail5Aish"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                    </div>
+                  </div>
                 </div>
            </div>
         </div>
@@ -146,9 +180,18 @@
                     WebDev Team
                 </h1>
             <div class="images6WebDev">
-                <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>
-                <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>
-                <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>  
+                <div class = "container6Connie">
+                        <div class="headshot"><img src="assets/teamAssets/teamConnie.png" alt=""></div>
+                        <div class="mail6Connie"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                    </div>
+                <div class = "container6Winnie">
+                        <div class="headshot"><img src="assets/teamAssets/teamWinnie.png" alt=""></div>
+                        <div class="mail6Winnie"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                    </div>
+                <div class = "container6Cinnie">
+                        <div class="headshot"><img src="assets/teamAssets/teamCinnie.png" alt=""></div>
+                        <div class="mail6Cinnie"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                    </div>  
             
             </div>
 
@@ -157,8 +200,14 @@
                         Education Team
                     </h1>
                     <div class="images6Edu">
-                    <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>
-                    <div><img src="assets/teamAssets/TempPhoto.png" alt=""></div>
+                    <div class = "container6Lisa">
+                        <div class="headshot"><img src="assets/teamAssets/teamLisa.png" alt=""></div>
+                        <div class="mail6Lisa"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                    </div>
+                    <div class = "container6Karen">
+                        <div class="headshot"><img src="assets/teamAssets/teamKaren.png" alt=""></div>
+                        <div class="mail6Karen"><img src="assets/teamAssets/Mail.png" alt=""></div>
+                    </div>
                 
                 </div>
            </div>
