Added emailing function and removed some former members.

--- a/public/home.html
+++ b/public/home.html
@@ -13,7 +13,7 @@
         <header>
             <div class="header">
 
-                <img src="assets\newLogo.webp" alt="logo" class="logo">
+                <img src="assets\Logo.png" alt="logo" class="logo">
                 
                 <nav class="headingLeft">
                         <ul>
